# realme-neo5-yolo-tracker

./: .gitignore  ALTERNATIVE_BUILD_SOLUTIONS.md  ANDROID_STUDIO_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_READY_GUIDE.md  BUILD_STATUS_REALME.md  CHINESE_ANDROID_STUDIO_GUIDE.md  DEBUG_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  GITHUB_BUILD_COMPLETE_GUIDE.md  GITHUB_DETAILED_GUIDE.md  GITHUB_QUICK_REFERENCE.md  GITHUB_UPLOAD_GUIDE.md  IMMEDIATE_BUILD_GUIDE.md  K30S_DEBUGGING_COMPLETE.md  K30S_DEBUG_GUIDE.md  LOG_ANALYSIS_SOLUTION.md  NCNN_INTEGRATION_REPORT.md  PACKAGE_INSTRUCTIONS.md  PROJECT_COMPLETION_FINAL.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_FINAL.md  PROJECT_SUMMARY.md  QUICK_BUILD_GUIDE.md  README.md  SIMPLE_SOLUTIONS.md  STEP2_FILE_UPLOAD_GUIDE.md  VSCODE_GUIDE.md  YUV_OPTIMIZATION.md  adb-setup.ps1  auto-deploy.ps1  build-apk-gpt.yml  build-apk.yml  build.gradle  build.yml  check_ncnn_status.sh  config.properties  create_test_model.ps1  debug_report.sh  (+16 more)
.github/: README.md
.github/workflows/: build-apk.yml  build.yml
android-sdk/platform-tools/: NOTICE.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  yolov5n.param  yolov5n_simple.param
app/src/main/cpp/: CMakeLists.txt  tracker_jni.cpp
app/src/main/java/com/example/tracker/: AdaptiveSearchStrategy.kt  CameraController.kt  DeviceDetector.kt  ImageConverter.kt  MainActivity.kt  NativeBridge.kt  OverlayView.kt  RealmeNeo5Config.kt  SystemMonitor.kt  UsbSerial.kt
app/src/main/res/drawable/: bg_status_panel.xml  bg_status_tag.xml  ic_cpu.xml  ic_fps.xml  ic_gpu.xml  ic_launcher_foreground.xml  ic_temp.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  device_filter.xml
app/src/test/java/com/example/tracker/: UsbProtocolTest.kt
jdk-17.0.2/: release
native/: CMakeLists.txt  yolo_tracker_impl.cpp
native/include/: bytetrack.h  detector.h  nms.h  usb_protocol.h
native/src/: bytetrack.cpp  detector.cpp  detector_stub.cpp  jni_interface.cpp  nms.cpp  usb_protocol.cpp
ncnn-20240102-android/armeabi-v7a/include/ncnn/: platform.h
ncnn-20240102-android/x86/include/ncnn/: platform.h
ncnn-20240102-android/x86/lib/cmake/ncnn/: ncnn.cmake
ncnn-android/lib/android/arm64-v8a/include/ncnn/: platform.h
platform-tools/: source.properties
